--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ freeline_project_description.json
 /.idea/modules.xml
 /.idea/runConfigurations.xml
 /.idea/vcs.xml
+/.idea/inspectionProfiles/Project_Default.xml
