--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
     //To be able to use material design layouts
     compile 'com.android.support:design:26.1.0'
+    //Create Json from objects
+    compile 'com.google.code.gson:gson:2.8.1'
 }
