--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,7 @@ dependencies {
     compile 'com.android.support:design:27.0.1'
     //Create Json from objects
     compile 'com.google.code.gson:gson:2.8.1'
+    //Circle image view
+    compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'org.jetbrains:annotations-java5:15.0'
 }
