Sync Frequency now reflects user selection

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,6 +85,7 @@
             android:authorities="com.forcetower.uefs.providers"
             android:name=".providers.SagresProvider"
             android:exported="false"
+            android:label="@string/sagres_sync"
             android:syncable="true"/>
     </application>
 
