--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ freeline_project_description.json
 /.idea/runConfigurations.xml
 /.idea/vcs.xml
 /.idea/inspectionProfiles/Project_Default.xml
+/.idea/kotlinc.xml
