--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
     //To be able to use material design layouts
     compile 'com.android.support:design:27.0.2'
+    //Card Layout
+    compile 'com.android.support:cardview-v7:27.0.2'
     //Create Json from objects
     compile 'com.google.code.gson:gson:2.8.1'
     //Circle image view
