--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
     lintOptions {
         abortOnError false
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
     buildToolsVersion '27.0.2'
 }
 
