--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.forcetower.uefs"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 7
-        versionName "2.1.0b"
+        versionCode 100007
+        versionName "2.1.1d"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -53,4 +53,8 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.7'
 
     compile 'org.jetbrains:annotations-java5:15.0'
+
+    //Butter knife
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
