--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.7'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation('com.mikepenz:aboutlibraries:6.0.1@aar') {
+        transitive = true
+    }
 }
