--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,8 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+
+# Intellij Stuff
 /.idea/encodings.xml
 /.idea/misc.xml
 /.idea/modules.xml
