--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.login.LoginActivity"
+        <activity
+            android:name=".view.login.LoginActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -35,31 +36,35 @@
         </activity>
         <activity
             android:name=".view.connected.NConnectedActivity"
-            android:theme="@style/AppTheme.NavigationDrawer"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NavigationDrawer"
             android:windowSoftInputMode="adjustPan"/>
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts"/>
+
         <activity
             android:name=".view.settings.SettingsActivity"
-            android:theme="@style/AppTheme.PreferencesStyle"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.PreferencesStyle">
+        </activity>
+        <activity
+            android:name=".view.class_details.ClassDetailsActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".view.class_details.ClassDetailsActivity"
-                  android:configChanges="orientation"
-                  android:screenOrientation="portrait">
+        <activity
+            android:name=".view.class_details.DisciplineClassesActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".view.class_details.DisciplineClassesActivity"
-                  android:configChanges="orientation"
-                  android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".view.about.AboutActivity"
-                  android:configChanges="orientation"
-                  android:screenOrientation="portrait">
+        <activity
+            android:name=".view.about.AboutActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
         </activity>
 
         <service
@@ -91,9 +96,12 @@
             android:label="@string/sagres_sync"
             android:syncable="true"/>
 
-        <activity android:name=".view.suggestion.SuggestionActivity"
-                  android:configChanges="orientation"
-                  android:screenOrientation="portrait">
+        <activity
+            android:name=".view.suggestion.SuggestionActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".view.class_reviews.ClassReviewActivity">
         </activity>
     </application>
 
