--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
         applicationId "com.forcetower.uefs"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 15
+        versionCode 16
         versionName "2.1.3b"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
@@ -59,6 +59,8 @@ dependencies {
     annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
     implementation "android.arch.lifecycle:common-java8:1.0.0"
     implementation "android.arch.lifecycle:reactivestreams:1.0.0"
+
+    compile 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
 
     implementation('com.mikepenz:aboutlibraries:6.0.1@aar') {
         transitive = true
