--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,7 +101,7 @@
             android:configChanges="orientation"
             android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".view.class_reviews.ClassReviewActivity">
+        <activity android:name=".view.experiments.class_reviews.ClassReviewActivity">
         </activity>
     </application>
 
