--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,8 +96,8 @@
         </activity>
         
         <provider
+            android:name="android.support.v4.content.FileProvider"
             android:authorities="@string/authority"
-            android:name=".provider.AppFileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
