--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ freeline_project_description.json
 /.idea/vcs.xml
 /.idea/inspectionProfiles/Project_Default.xml
 /.idea/kotlinc.xml
+/.idea/codeStyles/Project.xml
+/.idea/caches/build_file_checksums.ser
