--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,7 +94,7 @@
         </activity>
         <activity android:name=".view.experimental.good_barrel.GoodBarrelActivity">
         </activity>
-        
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.forcetower.uefs.fileprovider"
@@ -104,6 +104,9 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths"/>
         </provider>
+
+        <activity android:name=".view.download.DownloadActivity">
+        </activity>
     </application>
 
 </manifest>
