--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,17 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:12.0.0'
     implementation 'com.google.firebase:firebase-messaging:12.0.0'
 
+
+    implementation 'com.google.android.gms:play-services-auth:12.0.0'
+    implementation('com.google.api-client:google-api-client-android:1.23.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    implementation('com.google.apis:google-api-services-calendar:v3-rev304-1.23.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+
+    implementation 'pub.devrel:easypermissions:0.3.0'
+
     implementation('com.mikepenz:aboutlibraries:6.0.1@aar') {
         transitive = true
     }
