--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ freeline_project_description.json
 /.idea/kotlinc.xml
 /.idea/codeStyles/Project.xml
 /.idea/caches/build_file_checksums.ser
+/.idea/assetWizardSettings.xml
