--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ android {
         applicationId "com.forcetower.uefs"
         minSdkVersion 16
         targetSdkVersion 27
+        multiDexEnabled true
         versionCode buildVersionCode()
         versionName version
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -39,6 +40,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation 'com.android.support:multidex:1.0.3'
 
     implementation 'com.android.support:design:27.1.0'
     implementation 'com.android.support:cardview-v7:27.1.0'
