Feature discovery for profile image

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,7 @@ dependencies {
     }
 
     implementation 'pub.devrel:easypermissions:0.3.0'
+    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
 
     implementation('com.mikepenz:aboutlibraries:6.0.1@aar') {
         transitive = true
