Possibility of color change (this might break the app)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,8 +36,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".view.settings.SettingsActivity"
-            android:theme="@style/AppTheme.PreferencesStyle">
+            android:name=".view.settings.SettingsActivity">
         </activity>
         <activity android:name=".view.about.AboutActivity">
         </activity>
