Removed label from launcher activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,7 @@
             android:value="@string/app_id"/>
 
         <activity
-            android:name=".view.login.MainActivity"
-            android:label="@string/auth_activity">
+            android:name=".view.login.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
