--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,7 @@
             android:name="com.google.android.gms.games.APP_ID"
             android:value="@string/app_id"/>
 
-        <activity
-            android:name=".view.login.MainActivity">
+        <activity android:name=".view.login.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -44,8 +43,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:label="@string/settings"
             android:name=".view.settings.SettingsActivity"
+            android:label="@string/settings"
             android:theme="@style/AppTheme.PreferencesStyle">
         </activity>
         <activity
@@ -100,6 +99,7 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.forcetower.uefs.fileprovider"
@@ -130,6 +130,9 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
         </service>
+
+        <activity android:name=".view.suggestion.SuggestionActivity">
+        </activity>
     </application>
 
 </manifest>
