--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@ freeline_project_description.json
 /.idea/caches/build_file_checksums.ser
 /.idea/assetWizardSettings.xml
 /app/src/main/res/drawable/Thumbs.db
+/app/src/main/res/values/ids.xml
