--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:15.1.0'
     implementation 'com.google.firebase:firebase-database:15.0.1'
     implementation 'com.google.firebase:firebase-messaging:15.0.2'
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
 
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.google.android.gms:play-services-games:15.0.1'
@@ -93,6 +94,7 @@ dependencies {
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
 
     implementation 'android.arch.work:work-runtime:1.0.0-alpha01'
+    implementation 'android.arch.work:work-firebase:1.0.0-alpha01'
 
     implementation('com.mikepenz:aboutlibraries:6.0.1@aar') {
         transitive = true
