Work Manager is too beta for production. Learned a lesson.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,6 +89,14 @@
             </intent-filter>
         </service>
 
+        <service
+            android:exported="false"
+            android:name=".worker.SagresSyncJobService">
+            <intent-filter>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+            </intent-filter>
+        </service>
+
         <activity android:name=".view.universe.UniverseActivity">
         </activity>
     </application>
