--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,6 +97,11 @@
             </intent-filter>
         </service>
 
+        <service
+            android:exported="true"
+            android:name=".worker.SagresSyncJobScheduler"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
+
         <activity android:name=".view.universe.UniverseActivity">
         </activity>
     </application>
