Back with old suff

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,6 +102,52 @@
             android:name=".worker.SagresSyncJobScheduler"
             android:permission="android.permission.BIND_JOB_SERVICE"/>
 
+        <receiver
+            android:name=".sync.alm.RefreshBroadcastReceiver">
+            <intent-filter>
+                <action android:name="com.forcetower.uefs.REFRESH"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".sync.alm.BootOptionsBroadcastReceiver"
+            android:enabled="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".sync.service.SyncAdapterService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.content.SyncAdapter"/>
+            </intent-filter>
+
+            <meta-data
+                android:name="android.content.SyncAdapter"
+                android:resource="@xml/syncadapter"/>
+        </service>
+        <service
+            android:name=".sync.service.GenericAccountService">
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator"/>
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator"/>
+        </service>
+
+        <provider
+            android:name=".sync.service.SagresProvider"
+            android:authorities="@string/authority"
+            android:exported="false"
+            android:label="@string/sagres_sync"
+            android:syncable="true"/>
+
+
         <activity android:name=".view.universe.UniverseActivity">
         </activity>
     </application>
