--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,8 @@ dependencies {
     implementation 'pub.devrel:easypermissions:0.3.0'
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
 
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
+
     implementation('com.mikepenz:aboutlibraries:6.0.1@aar') {
         transitive = true
     }
