--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     implementation "android.arch.work:work-runtime:1.0.0-alpha03"
     implementation "android.arch.work:work-firebase:1.0.0-alpha03"
 
+    implementation "android.arch.navigation:navigation-fragment:1.0.0-alpha02"
+    implementation "android.arch.navigation:navigation-ui:1.0.0-alpha02"
+
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
