--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,8 @@ dependencies {
     implementation "android.arch.lifecycle:common-java8:1.1.1"
     implementation "android.arch.persistence.room:runtime:1.1.1"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-    implementation "android.arch.work:work-runtime:1.0.0-alpha03"
-    implementation "android.arch.work:work-firebase:1.0.0-alpha03"
+    implementation "android.arch.work:work-runtime:1.0.0-alpha04"
+    implementation "android.arch.work:work-firebase:1.0.0-alpha04"
 
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
@@ -78,7 +78,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.google.firebase:firebase-auth:16.0.2'
     implementation 'com.google.firebase:firebase-database:16.0.1'
-    implementation 'com.google.firebase:firebase-messaging:17.0.0'
+    implementation 'com.google.firebase:firebase-messaging:17.1.0'
     implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
         transitive = true
@@ -100,9 +100,7 @@ dependencies {
 
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
 
-    implementation('com.mikepenz:aboutlibraries:6.0.1@aar') {
-        transitive = true
-    }
+    implementation "com.mikepenz:aboutlibraries:6.0.9"
 }
 
 apply from: "../artifacts.gradle"
