--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,8 +49,7 @@
             android:label="@string/settings"
             android:theme="@style/AppTheme.PreferencesStyle" />
         <activity
-            android:name=".view.event.EventDetailsActivity"
-            android:theme="@style/AppTheme.EventsActivity"/>
+            android:name=".view.event.EventDetailsActivity" />
         <activity
             android:name=".view.about.AboutActivity"
             android:label="@string/about_app" />
@@ -86,17 +85,10 @@
             android:value="@string/default_firebase_notification_channel_id" />
 
         <service
-            android:name=".svc.firebase.UNESFirebaseMessagingService"
+            android:name=".svc.UNESFirebaseMessagingService"
             android:permission="true">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
-        <service
-            android:name=".svc.firebase.UNESFirebaseInstanceIDService"
-            android:permission="true">
-            <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
     </application>
